--- a/.github/ISSUE_TEMPLATE/task.yaml
+++ b/.github/ISSUE_TEMPLATE/task.yaml
@@ -1,7 +1,7 @@
 name: "Generic Task"
 description: "Create a generic task item"
 projects: ["expansion-games/1"]
-type: "Task"
+labels: ["triage"]
 body:
   - type: markdown
     attributes:
